# Psi

./: .gitignore  CMakeLists.txt  COPYING  DetectPlatform.cmake  Doxyfile  Doxyfile.in  README.rst  doc_filter.sh  toolchain-mingw.txt
android/: CMakeLists.txt  toolchain-android.txt
android/lib/: AndroidManifest.xml.in  ant.properties.in
android/lib/jni/: Android.mk.in
android/lib/res/values/: strings.xml
android/test/: AndroidManifest.xml.in  ant.properties.in
android/test/src/zeta/psi/tests/: TestLoader.java
cmake/: DetectPlatform.cmake
doc/: Instructions.doc  Instructions.h  MainPage.doc  MainPage.h  Notes.doc  Notes.h  Notes.txt  StorageSpecifiers.txt  Tvm.doc  TypeSystem.doc  TypeSystem.h
doc-doxygen/: MainPage.txt
doc-sphinx/: conf.py  index.rst
doc-sphinx/internals/: basic_types.rst  context.rst  index.rst  issues.rst  lifecycle.rst  overloading.rst  safe_mode.rst  setup.rst  storage_specifiers.rst  trees.rst  tvm_lowering.rst  tvm_mapping.rst
doc-sphinx/stdlib/: index.rst  todo.rst
doc-sphinx/tvm/: design.rst  glossary.rst  index.rst  instructions.rst  llvm.rst  syntax.rst
extra/: CallingConventions.c  CallingConventions2.cpp
src/: Aggregate.cpp  Aggregate.hpp  Array.hpp  Assert.cpp  Assert.hpp  Box.hpp  BuiltinTypes.cpp  CMakeLists.txt  Class.cpp  Class.hpp  CodeGenerator.cpp  CodeGenerator.hpp  Compiler.cpp  Compiler.hpp  Config.h.in  Configuration.cpp  Configuration.hpp  Container.hpp  Core.cpp  Core.hpp  CoreTest.cpp  CppCompiler.hpp  DefaultLifecycle.cpp  Enums.hpp  ErrorContext.cpp  ErrorContext.hpp  Export.hpp  ExpressionCompiler.cpp  ExpressionCompiler.hpp  Format.hpp  Function.cpp  Function.hpp  FunctionLower.cpp  FunctionLower.hpp  GCChecker.c  GCChecker.h  GarbageCollection.cpp  GarbageCollection.hpp  Implementation.cpp  Implementation.hpp  (+90 more)
src/Platform/: Platform.cpp  Platform.hpp  PlatformBSD.cpp  PlatformCompile.cpp  PlatformCompile.hpp  PlatformCompileUnix.cpp  PlatformCompileWindows.cpp  PlatformImplUnix.hpp  PlatformLinux.cpp  PlatformUnix.cpp  PlatformWindows.cpp  PlatformWindows.hpp
src/Runtime/: ExceptionLinux.c  ExceptionLinuxABI.h  StackAlloc.c
src/Test/: Test.cpp  Test.hpp  TestAndroid.cpp  TestConsole.cpp  TestMain.cpp
src/Tvm/: Aggregate.cpp  Aggregate.hpp  AggregateLowering.cpp  AggregateLowering.hpp  AggregateLoweringOperations.cpp  AggregateTest.cpp  Arithmetic.cpp  Arithmetic.hpp  Assembler.cpp  Assembler.hpp  AssemblerOperations.cpp  AssemblerTest.cpp  BigInteger.cpp  BigInteger.hpp  Constant.cpp  Constant.hpp  ControlFlow.cpp  ControlFlow.hpp  ControlFlowTest.cpp  Core.cpp  Core.hpp  CoreTest.cpp  Derived.cpp  Derived.hpp  DerivedTest.cpp  Disassembler.cpp  DisassemblerSource.cpp  Function.cpp  Function.hpp  FunctionTest.cpp  Functional.cpp  Functional.hpp  FunctionalBuilder.cpp  FunctionalBuilder.hpp  FunctionalOperations.hpp  FunctionalRewrite.hpp  Instruction.cpp  Instruction.hpp  InstructionBuilder.cpp  InstructionBuilder.hpp  (+47 more)
src/Tvm/LLVM/: Aggregate.cpp  Builder.cpp  Builder.hpp  Function.cpp  Functional.cpp  FunctionalConstant.cpp  FunctionalInstruction.cpp  Instructions.cpp  LLVMBackend.doc  Number.cpp  Primitive.cpp  Simple.cpp  Target.cpp  Target.hpp  Target_AMD64.cpp  Targets.cpp  Templates.hpp  Type.cpp
src/Tvm/c-backend/: Builder.cpp  Builder.hpp  CCompiler.cpp  CCompilerTCCLib.cpp  CModule.cpp  CModule.hpp  COperators.def  SystemLinux.cpp  TypeBuilder.cpp  ValueBuilder.cpp
src/Tvm/llvm/: Aggregate.cpp  Builder.cpp  Builder.hpp  CallingConventions.cpp  CallingConventions.hpp  Engine.cpp  Engine.hpp  Function.cpp  FunctionalConstant.cpp  FunctionalInstruction.cpp  Instructions.cpp  JIT.cpp  Jit.cpp  Jit.hpp  LLVMPopWarnings.hpp  LLVMPushWarnings.hpp  Target.cpp  Target.hpp  Target_AMD64.cpp  Target_Linux_x86.cpp  Target_Win32.cpp  Templates.hpp  Type.cpp
tests/: CMakeLists.txt  builtin.psi  circular.psi  class.psi  construct_destruct.expect  construct_destruct.psi  construct_destruct_global.expect  construct_destruct_global.psi  functions.psi  helloworld.psi  import.psi  interface.psi  quine.psi  recurse.psi  run_compare.py  types.psi  types2.psi
tests/interactive/: CMakeLists.txt  error_recover.py  psi_interact.py  variable_reuse.py
